fixed mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-black">
+<html lang="en" class="html bg-black">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="App.css">
     <!-- icon below -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- bootstrap below -->
